Fix some copy and spacing

--- a/src/styles/global/about-us.scss
+++ b/src/styles/global/about-us.scss
@@ -1,6 +1,6 @@
 .about-us .hero img {
   transition: max-width 250ms ease-in-out;
-  max-width: 300px;
+  max-width: 330px;
   @include media_min_break(md) {
     max-width: 450px;
   }
